<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:text="@string/signup_logo"
                android:textColor="@color/main_color"
                android:textSize="50dp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_image"
                android:textSize="15sp"
                android:layout_gravity="center">

            </TextView>

            <LinearLayout
                android:id="@+id/llBottomNav"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_gallery"
                    android:text="@string/gallery"
                    android:backgroundTint="@color/gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"/>

                <Button
                    android:id="@+id/btn_camera"
                    android:text="@string/camera"
                    android:backgroundTint="@color/gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/nickname"
                android:inputType="text" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/id"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/pw"
                android:inputType="textPassword" />


            <EditText
                android:id="@+id/et_password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/pw_check"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_round"
                android:text="@string/signup_logo" />

            <Button
                android:id="@+id/btn_go_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_round"
                android:text="@string/login" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
