<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_color">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ASK"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#F5FFFA"
        android:gravity="center"
        android:layout_marginTop= "100dp"
        android:layout_marginBottom= "80dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:privateImeOptions="defaultInputmode=english"
            android:background="@drawable/edit_round"
            android:inputType="textEmailAddress"
            android:hint="@string/id"
            android:paddingLeft="10dp"
            android:paddingVertical="13dp"
            android:layout_margin="5dp"
            />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/edit_round"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:paddingLeft="10dp"
            android:paddingVertical="13dp"
            android:hint="@string/pw"
            android:layout_margin="5dp"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/text_color1"
            android:layout_margin="5dp"
            android:text="@string/login" />



        <TextView
            android:id ="@+id/tv_sns_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/signup_by_another_id"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:padding="10dp"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_google_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_by_google"
            android:ems="10"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/signup_guide"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/text_color1"
                android:background="#00ffffff"
                android:text="@string/signup"/>

        </LinearLayout>

    </LinearLayout>





</LinearLayout>