<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/baseline_arrow_back_24"
            app:tint="@color/blue1" />

        <TextView
            android:id="@+id/tv_writing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/comment"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CAC9C9" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CAC9C9" />


    <LinearLayout
        android:id="@+id/comment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/et_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="5"
            android:hint="@string/leave_comment"
            android:privateImeOptions="defaultInputmode=korean"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/btn_comment" />

    </LinearLayout>
</LinearLayout>
