<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyblue_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sentiment_top"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00FFFFFF"
                app:srcCompat="@drawable/baseline_arrow_back_24"
                app:tint="@color/blue1" />

            <TextView
                android:id="@+id/tv_sentiment_report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sentiment_report"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sentiment_contents"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_main_sentiment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:background="@drawable/round_sentiment"
                android:elevation="10dp"
                android:backgroundTint="@color/white">

                <TextView
                    android:id="@+id/tv_main_sentiment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/main_sentiment"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/iv_main_sentiment"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            app:srcCompat="@drawable/baseline_account_circle_24"/>

                        <TextView
                            android:id="@+id/tv_company_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:text="삼성전자"/>


                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_main_sentiment_percent"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:text="긍정 70%"/>




                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_hot_keyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:background="@drawable/round_sentiment"
                android:elevation="10dp"
                android:backgroundTint="@color/white">

                <TextView
                    android:id="@+id/tv_hot_keyword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/hot_keyword"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:layout_margin="10dp">

                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>





                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_detail_sentiment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:background="@drawable/round_sentiment"
                android:elevation="10dp"
                android:backgroundTint="@color/white">

                <TextView
                    android:id="@+id/tv_show_graph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/show_graph"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="3년간의 데이터, 그 외에도 트위터, 뉴스 각각의 데이터와 통계 등"/>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_show_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:background="@drawable/round_sentiment"
                android:elevation="10dp"
                android:backgroundTint="@color/white">

                <TextView
                    android:id="@+id/tv_show_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/show_url"/>


                <TextView
                    android:id="@+id/tv_original_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>




            </LinearLayout>





        </LinearLayout>



    </LinearLayout>

</ScrollView>